<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>flowlogix</artifactId>
    <version>9.x-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Flow Logix Root</name>
    <description>Flow Logix Jakarta EE Components Root POM</description>
    <url>https://docs.flowlogix.com</url>
    <inceptionYear>2011</inceptionYear>

    <parent>
        <groupId>com.flowlogix</groupId>
        <artifactId>payara-pom</artifactId>
        <version>20</version>
    </parent>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <checkstyle.supressionsLocation>${flowlogix.basedir}/checkstyle/suppressions.xml</checkstyle.supressionsLocation>

        <release.profiles>${release.profile},javadoc-release</release.profiles>
        <javadoc.title>${project.name}</javadoc.title>
        <javadoc.snippet.path>${snippet.path}:${flowlogix.basedir}/jakarta-ee/jee-examples/src/main/java</javadoc.snippet.path>
        <base.directory.property>flowlogix.basedir</base.directory.property>
        <base.directory.groupId>com.flowlogix</base.directory.groupId>
        <base.directory.artifactId>flowlogix</base.directory.artifactId>
        <payara.start.disable>true</payara.start.disable>

        <eclipselink.version>4.0.3</eclipselink.version>
        <omnifaces.version>4.4.1</omnifaces.version>
        <primefaces.version>14.0.0</primefaces.version>
        <depchain.version>13</depchain.version>
    </properties>

    <scm>
        <url>https://github.com/flowlogix/flowlogix</url>
        <connection>scm:git:git://github.com:flowlogix/flowlogix.git</connection>
        <developerConnection>scm:git:git@github.com:flowlogix/flowlogix.git</developerConnection>
    </scm>

    <modules>
        <module>flowlogix-bom</module>
        <module>jakarta-ee</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>test-jar</id>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.commonjava.maven.plugins</groupId>
                <artifactId>directory-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <version>3.0.2</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.groovy</groupId>
                        <artifactId>groovy-all</artifactId>
                        <version>4.0.21</version>
                        <scope>runtime</scope>
                        <type>pom</type>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>testGroups</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                        <configuration>
                            <scripts>
                                <!-- combine individual test profiles into a single test group property -->
                                <script>${flowlogix.basedir}/setTestGroupProperties.groovy</script>
                            </scripts>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.soebes.maven.plugins</groupId>
                <artifactId>echo-maven-plugin</artifactId>
                <version>0.5.0</version>
                <executions>
                    <execution>
                        <id>echo test groups</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>echo</goal>
                        </goals>
                        <configuration>
                            <echos>
                                <echo>Test Groups (Tags): ${groups}</echo>
                            </echos>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>com/flowlogix/**</include>
                    </includes>
                    <excludes>
                        <exclude>com/flowlogix/**/*Test</exclude>
                        <exclude>com/flowlogix/**/*Test$*</exclude>
                        <exclude>com/flowlogix/**/*IT</exclude>
                        <exclude>com/flowlogix/**/*IT$*</exclude>
                        <exclude>com/flowlogix/**/__EJB31_Generated*</exclude>
                        <!-- cause too many coverage misses -->
                        <exclude>com/flowlogix/examples/**</exclude>
                        <exclude>com/flowlogix/demo/**</exclude>
                        <exclude>com/flowlogix/logcapture/**</exclude>
                        <exclude>com/flowlogix/testcontainers/**</exclude>
                    </excludes>
                    <classDumpDir>${flowlogix.basedir}/target/classes-jacoco</classDumpDir>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <annotationProcessorPath>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </annotationProcessorPath>
                            <annotationProcessorPath>
                                <groupId>org.eclipse.persistence</groupId>
                                <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
                                <version>${eclipselink.version}</version>
                            </annotationProcessorPath>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <systemPropertyVariables>
                            <webdriver.chrome.binary>${webdriver.chrome.binary}</webdriver.chrome.binary>
                            <webdriver.firefox.binary>${webdriver.firefox.binary}</webdriver.firefox.binary>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <configuration>
                        <overview>${project.build.sourceDirectory}/overview.html</overview>
                        <doctitle>${javadoc.title}</doctitle>
                        <bottom>Copyright © ${project.inceptionYear}-2024 Flow Logix, Inc. All Rights Reserved.</bottom>
                        <excludePackageNames>*.internal</excludePackageNames>
                        <links>
                            <link>${central.archive.url}/org/primefaces/primefaces/${primefaces.version}/primefaces-${primefaces.version}-javadoc.jar/!</link>
                            <link>${central.archive.url}/org/omnifaces/omnifaces/${omnifaces.version}/omnifaces-${omnifaces.version}-javadoc.jar/!</link>
                        </links>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>io.github.git-commit-id</groupId>
                    <artifactId>git-commit-id-maven-plugin</artifactId>
                    <version>8.0.2</version>
                    <configuration>
                        <useNativeGit>false</useNativeGit>
                        <dotGitDirectory>${flowlogix.basedir}/.git</dotGitDirectory>
                        <failOnNoGitDirectory>false</failOnNoGitDirectory>
                        <abbrevLength>7</abbrevLength>
                        <gitDescribe>
                            <skip>true</skip>
                        </gitDescribe>
                        <generateGitPropertiesFile>true</generateGitPropertiesFile>
                        <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                        <includeOnlyProperties>
                            <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
                            <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
                        </includeOnlyProperties>
                        <commitIdGenerationMode>full</commitIdGenerationMode>
                        <dateFormatTimeZone>UTC</dateFormatTimeZone>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>stress-test</id>
            <properties>
                <test_groups>StressTest</test_groups>
            </properties>
        </profile>
        <profile>
            <id>ui-test</id>
            <properties>
                <test_groups>UserInterface</test_groups>
            </properties>
        </profile>
        <profile>
            <id>all-tests</id>
            <properties>
                <test_groups>any()</test_groups>
            </properties>
        </profile>
        <profile>
            <id>javadoc-release</id>
            <properties>
                <javadoc.title>${project.name} ${project.version}</javadoc.title>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.persistence</groupId>
                <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
                <version>${eclipselink.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
